fix h-scrolling on mobile, change text color at the navbar, remove back-image

--- a/style.css
+++ b/style.css
@@ -81,9 +81,10 @@
   }
 
   .backr {
+    overflow-x: unset;
     width: 100%;
-    background-image: url(images/backround-search.jpg);
-    background-position: right;
+    /* background-image: url(images/backround-search.jpg); */
+    /* background-position: right; */
     background-size: cover;
     margin-left: 10px;
     margin-right: auto;
